--- a/css/style.css
+++ b/css/style.css
@@ -1943,7 +1943,9 @@ a.tab-button-reviews {
 
 .reviews-text li>div>div>img {
   width: 90px;
-  border-radius: 40%;
+  border-radius: 37%;
+  border-bottom-left-radius: 50%;
+  border-bottom-right-radius: 50%;
   padding-bottom: 22px;
   display: block;
   position: relative;
