--- a/css/style-lk.css
+++ b/css/style-lk.css
@@ -1,5 +1,12 @@
 /*---------Основные Блоки-----------*/
-
+.page-lk {
+    width: 100%;
+    height: 100px;
+    display: flex;
+    justify-content: space-between;
+    padding: 0 50px;
+    flex-direction: column;
+}
 .lk-wrapper {
     display: flex;
     flex-direction: row;
